# pinepods-firewood

./: .gitignore  Cargo.toml  README.md  dockerfile  requirements.txt  test.conf  test_remote_control.py
src/: app.rs  config.rs  helpers.rs  lib.rs  main.rs  main_backup.rs  settings.rs  theme.rs
src/api/: client.rs  downloads.rs  episodes.rs  mod.rs  models.rs  podcasts.rs  queue.rs
src/audio/: mod.rs  player.rs
src/auth/: auth_manager.rs  login_flow.rs  mod.rs  models.rs  session_storage.rs  tui_login.rs
src/helpers/: gen_funcs.rs  mdns_utils.rs  models.rs  music_handler.rs  queue.rs  requests.rs  stateful_list.rs  stateful_table.rs
src/remote/: discovery.rs  mod.rs  models.rs  server.rs
src/tui/: app.rs  mod.rs
src/tui/components/: mod.rs
src/tui/pages/: downloads.rs  episodes.rs  home.rs  mod.rs  player.rs  podcasts.rs  queue.rs  saved.rs  search.rs  settings.rs
src/tui/utils/: mod.rs
src/tui/widgets/: mod.rs
