[package]
name = "pinepods_firewood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
ratatui = { version = "0.26.2", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
glob = "0.3.1"
rodio = { version = "0.17.3", features = ["symphonia-all"]}
lofty = "0.16.1"
toml = "0.8.4"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.107"
serde_derive = "1.0.188"
home = "0.5.4"
directories = "5.0"
bincode = "1.3.3"
anyhow = "1.0.75"
log = "0.4"
env_logger = { version = "0.11.3", features = [] }
dirs = "5.0.1"
libmdns = "0.8.0"
tokio-utils = "0.1.2"
