[package]
name = "pinepods_firewood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
glob = "0.3.1"
rodio = { version = "0.17.3", features = ["symphonia-all"]}
lofty = "0.22.4"
toml = "0.9.5"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.107"
serde_derive = "1.0.188"
home = "0.5.4"
directories = "6.0.0"
bincode = "2.0.1"
anyhow = "1.0.75"
log = "0.4"
env_logger = { version = "0.11.3", features = [] }
dirs = "6.0.0"
libmdns = "0.9.1"
tokio-utils = "0.1.2"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1.0"
urlencoding = "2.1"
bytes = "1.5"
axum = "0.7"
tower = "0.4"
mdns-sd = "0.11"
local-ip-address = "0.6"
