[package]
name = "pinepods_firewood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking"] } # reqwest with JSON parsing support
futures = "0.3.31" # for our async / await blocks
tokio = { version = "1.47.1", features = ["full"] } # for our async runtime
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
crossterm = "0.29.0"
glob = "0.3.2"
rodio = { version = "0.21.1", features = ["symphonia-all"]}
symphonia = { version = "0.5.4", features = ["all"] }
lofty = "0.22.4"
toml = "0.9.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
serde_derive = "1.0.219"
home = "0.5.11"
directories = "6.0.0"
bincode = "2.0.1"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = { version = "0.11.8", features = [] }
dirs = "6.0.0"
libmdns = "0.9.1"
tokio-utils = "0.1.2"
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
regex = "1.11,1"
urlencoding = "2.1.3"
bytes = "1.10.1"
axum = "0.8.4"
tower = "0.5.2"
mdns-sd = "0.13.11"
local-ip-address = "0.6.5"
